Enable code formatter in pre-commit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -41,11 +41,11 @@ repos:
       - id: isort
         args: [--profile=black]
 
-# - repo: https://github.com/psf/black
-#   rev: 23.7.0
-#   hooks:
-#     - id: black
-#       args: [--line-length=79]
+  - repo: https://github.com/psf/black
+    rev: 23.7.0
+    hooks:
+      - id: black
+        args: [--line-length=79]
 
 # - repo: https://github.com/pre-commit/mirrors-mypy
 #   rev: v1.5.1
