--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -22,5 +22,5 @@ jobs:
         with:
           python-version: 3.11.4
 
-      - name: Run linters
+      - name: Run pre-commit
         uses: pre-commit/action@v3.0.0
